# eleanore-skills

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.cursor/rules/: branch-before-push.mdc  skill-layout.mdc
.cursor/skills/: daily-slack-triage  google-docs  google-sheets  pedregal-biweekly-status
mcps/: README.md  settings-snippet.json
plugins/_template/: CLAUDE.md
plugins/_template/.claude-plugin/: plugin.json
plugins/pedregal-biweekly-status/: CLAUDE.md
plugins/pedregal-biweekly-status/.claude-plugin/: plugin.json
plugins/pedregal-biweekly-status/skills/: pedregal-biweekly-status
skills/_template/: SKILL.md
skills/daily-slack-triage/: SKILL.md
skills/google-docs/: SKILL.md
skills/google-docs/scripts/: auth.py  fetch_doc.py  format_doc.py  requirements.txt  search_docs.py  update_doc.py
skills/google-sheets/: SKILL.md
skills/google-sheets/scripts/: add_conditional_format.py  add_dropdown.py  auth.py  clear_data_row_bg.py  create_sheet.py  format_sheet.py  format_wrap_columns.py  manage_tabs.py  read_sheet.py  set_text_format.py  write_sheet.py
skills/pedregal-biweekly-status/: SKILL.md
skills/pedregal-mob-weekly-update/: SKILL.md
