[project]
name = "eleanore-skills"
version = "0.0.0"
description = "Workspace root for Eleanore's personal Claude skills — not installable, just holds tool config"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH", "ANN", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/scripts/*.py" = ["ANN", "E402"]

[tool.ruff.format]
quote-style = "double"
